--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 
 # dependencies
 /node_modules
+node_modules
+node_modules/
 /.pnp
 .pnp.js
 
@@ -9,7 +11,7 @@
 /coverage
 
 # production
-/build
+/frontend/build
 
 # misc
 .DS_Store
@@ -17,6 +19,7 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.vscode/settings.json
 
 npm-debug.log*
 yarn-debug.log*
