--- a/.gitignore
+++ b/.gitignore
@@ -15,11 +15,13 @@ node_modules/
 
 # misc
 .DS_Store
+.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 .vscode/settings.json
+
 
 npm-debug.log*
 yarn-debug.log*
